sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:8: error: value -- is not a member of Int
  for(j<-n--1 to 0)
          ^