sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2()  {
  
  var n = getNombreValeurs()
  var end = true
  var tour = 0
  
  for(j<-n--1 to 0)
  {
    end = false
    for(i<-0 to j )
    {
      if (!plusPetit(i,i+1))
      {
        echange(i,i+1)
        end = true
      }
    }
  }
  
}